--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -6,8 +6,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase": "^8.0.2",
+    "firebase": "^8.10.1",
     "firebase-admin": "^11.5.0",
+    "firestore": "^1.1.6",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2"
